# revolver-tournamenter

./: .gitignore  LICENSE  cspell.json  mkdocs.yml  pyproject.toml
.github/: CONTRIBUTING.md
.github/workflows/: ci.yml
docs/: index.md
src/revolver-tournamenter/: input.txt  main.py  pairings.py  scoresheet_generator.py  tournament_generation.py
src/revolver_tournamenter/: __main__.py  pairings.py  sheetsAPI.py  tournament_generation.py
tests/: test_version.py
