[project]
name = "revolver-tournamenter"
description = "A script for generating pairings for the Revolver League's monthly Magic: The Gathering Constructed tournaments"
readme = "docs/index.md"
requires-python = ">=3.10,<4"
license = { text = "MIT" }
authors = [{ name = "Hyrum Richardson", email = "hyrum.richardson1@gmail.com" }]
keywords = ["mtg", "magic the gathering", "tournament", "pairings"]
classifiers = [
  "Natural Language :: English",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Typing :: Typed",
]
dependencies = [
  "numpy>=1.26,<2",
  "openpyxl>=3.1,<4"
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/hyrumrichardson/revolver-tournamenter"
Repository = "https://github.com/hyrumrichardson/revolver-tournamenter"

[project.scripts]
revolver = "revolver_tournamenter.__main__:main"

[build-system]
requires = ["setuptools>=65", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
version_scheme = "guess-next-dev"
local_scheme = "no-local-version"

[tool.setuptools.packages.find]
where = ["src"]

